# aizo2

./: CMakeLists.txt  main.cpp  opisGrafNieskierowany.txt
files/: opisGrafNieskierowany.txt
graph/: Graph.cpp  Graph.h
src/: main.cpp
src/algorithms/: Dijkstra.cpp  Dijkstra.h  FordBellman.cpp  FordBellman.h  Kruskal.cpp  Kruskal.h  MSTalgorithms.cpp  MSTalgorithms.h  Prim.cpp  Prim.h  ShortestPathAlgorithm.cpp  ShortestPathAlgorithm.h
src/graph/: Graph.cpp  Graph.h
src/structures/: Table.cpp  Table.h
src/tests/: AutoTests.cpp  AutoTests.h  ManualTests.cpp  ManualTests.h  Time.cpp  Time.h
tests/: AutoTests.cpp  ManualTests.cpp  ManualTests.h
wyniki/: analiza.py
wyniki/wyniki/: BellmanFordAlgorithmList.csv  BellmanFordAlgorithmMatrix.csv  DijkstraAlgorithmList.csv  DijkstraAlgorithmMatrix.csv  KruskalAlgorithmList.csv  KruskalAlgorithmMatrix.csv  PrimAlgorithmList.csv  PrimAlgorithmMatrix.csv
